--- a/src/content/docs/zh-cn/index.mdx
+++ b/src/content/docs/zh-cn/index.mdx
@@ -21,7 +21,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## 成功案例
 
 <CardGrid stagger>
-	<Card title="Degrees-of-Lewdity" icon="pencil">
+	<Card title="Degrees of Lewdity" icon="pencil">
 		开放世界角色扮演文字游戏Degrees of Lewdity
 	</Card>
 	<Card title="Course of Temptation" icon="add-document">
